--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Research Assistant at NASA Goddard Space Flight Center</p>
         <p class="view"><a href="http://github.com/orderedlist/minimal">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
         
-        <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a>.</p>
+        <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
         <ul>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
@@ -31,9 +31,9 @@
 
         <p>I am a Research Assistant in the Astroparticle Physics Lab at NASA Goddard Space Flight Center, where I am currently doing research on neutron stars. In particular, we are inferencing neutron star parameters from NICER and Fermi light curves using neural networks.</p>
 
-        <p>My email addy is <a href="mailto:tom@github.com">tom@github.com</a>.</p>
+        <h1>Site is very much a work in progress.</h1>
 
-        <h2>Math is hard, let's go shopping</h2>
+        <h2>Math is hard</h2>
 
         <p>In first grade I learned that 5 &gt; 3 and 2 &lt; 7. Maybe some arrows. 1 -&gt; 2 -&gt; 3. 9 &lt;- 8 &lt;- 7.</p>
 
