--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Minimal by Steve Smith</title>
+    <title>Thibault Lechien</title>
+    <logo> /assets/IMG_1624.jpg</logo>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,8 +16,10 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Thibault Lechien </h1>
+        <h1>Thibault Lechien</h1>
         <p>Research Assistant at NASA Goddard Space Flight Center</p>
+
+        
         <p class="view"><a href="http://github.com/orderedlist/minimal">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
         
         <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
