--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
         
         <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
 
-        <a class="linkedin-button" href="https://www.linkedin.com/in/tlechien" target="_blank">LinkedIn Profile</a>
-        
+        <a class="linkedin-button" href="https://www.linkedin.com/in/tlechien" target="_blank">
+          <img src="https://static-exp1.licdn.com/sc/h/al2o9zrvru7aqj8e1x2rzsrca" alt="LinkedIn Logo">
+          LinkedIn Profile
+        </a>
+
         <ul>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
