--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       }
     </style>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   </head>
   <body>
     <div class="wrapper">
@@ -40,9 +42,10 @@
         <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
 
         <a class="linkedin-button" href="https://www.linkedin.com/in/tlechien" target="_blank">
-          <img src="https://static-exp1.licdn.com/sc/h/al2o9zrvru7aqj8e1x2rzsrca" alt="LinkedIn Logo">
-          LinkedIn Profile
+          LinkedIn <i class="fa fa-linkedin-square" style="color:rgb(174, 174, 174)"></i>
         </a>
+
+        
 
         <ul>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
