--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       .linkedin-button:hover {
         background-color: #005082;
       }
+      .linkedin-button:hover span {
+      color: #fff; /* Text color remains white on hover */
+    }
     </style>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -42,7 +45,7 @@
         <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
 
         <a class="linkedin-button" href="https://www.linkedin.com/in/tlechien" target="_blank">
-          LinkedIn <i class="fa fa-linkedin-square" style="color:rgb(174, 174, 174)"></i>
+          LinkedIn <i class="fa fa-linkedin-square" style="font-size:32px;color:rgb(255, 255, 255)"></i>
         </a>
 
         
