--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         background-color: #0077B5;
         color: #fff;
         text-decoration: none;
-        padding: 10px 20px;
+        padding: 5px 5px;
         border-radius: 5px;
         font-weight: bold;
         transition: background-color 0.3s ease;
@@ -37,16 +37,18 @@
     <div class="wrapper">
       <header>
         <h1>Thibault Lechien</h1>
-        <p>Research Assistant at NASA Goddard Space Flight Center</p>
+        <p>Research Assistant</p>
+        <p>SURA / NASA Goddard Space Flight Center</p>
         <img src="/assets/IMG_1624.jpg" alt="Thibault Lechien's Photo">
 
-        <p class="view"><a href="http://github.com/orderedlist/minimal">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
         
         <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
 
         <a class="linkedin-button" href="https://www.linkedin.com/in/tlechien" target="_blank">
-          LinkedIn <i class="fa fa-linkedin-square" style="font-size:32px;color:rgb(255, 255, 255)"></i>
+          <i class="fa fa-linkedin-square" style="font-size:32px;color:rgb(255, 255, 255)"></i>
         </a>
+
+        <p><a href="/assets/CV.pdf" target="_blank">CV</a></p>
 
         
 
