Add RG and Gscholar

--- a/index.html
+++ b/index.html
@@ -60,18 +60,22 @@
           <i class="fa fa-linkedin-square" style="font-size:32px;color:rgb(255, 255, 255)"></i>
         </a>
 
+        <a class="linkedin-button" href="https://www.researchgate.net/profile/Thibault-Lechien-2" target="_blank">
+          <img src="/assets/RGlogo.png" alt="ResearchGate" style="width: 32px; height: 32px;">
+        </a>
+
+        
+        <a class="linkedin-button" href="https://scholar.google.be/citations?user=ohWNXuEAAAAJ&hl=en&oi=ao" target="_blank">
+          <img src="/assets/GScholarlogo.png" alt="Google Scholar" style="width: 32px; height: 32px;">
+        </a>
+
         <!-- CV button -->
-        <a class="cv-button" href="/assets/CV.pdf" target="_blank">CV</a>
+        <a class="cv-button" href="/assets/CV.pdf" target="_blank">Download my CV</a>
       </div>
 
 
       <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
 
-      <ul>
-        <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
-        <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
-        <li><a href="http://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
-      </ul>
     </header>
     <section>
       <h1>AI for Astrophysics</h1>
