--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
     }
   </style>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -51,19 +50,19 @@
       <h1>Thibault Lechien</h1>
       <p>Research Assistant <br> SURA / NASA Goddard Space Flight Center</p>
       <img src="/assets/IMG_1624.jpg" alt="Thibault Lechien's Photo">
+      <p></p>
 
 
       <!-- Container for buttons -->
       <div class="button-container">
-        <!-- LinkedIn button with logo -->
+        
         <a class="linkedin-button" href="https://www.linkedin.com/in/tlechien" target="_blank">
-          <i class="fa fa-linkedin-square" style="font-size:32px;color:rgb(255, 255, 255)"></i>
+          <img src="/assets/linkedinwhite.png" alt="Linkedin" style="width: 32px; height: 32px;">
         </a>
 
         <a class="linkedin-button" href="https://www.researchgate.net/profile/Thibault-Lechien-2" target="_blank">
-          <img src="/assets/RGlogo.png" alt="ResearchGate" style="width: 32px; height: 32px;">
+          <img src="/assets/RGlogowhite.png" alt="ResearchGate" style="width: 32px; height: 32px;">
         </a>
-
         
         <a class="linkedin-button" href="https://scholar.google.be/citations?user=ohWNXuEAAAAJ&hl=en&oi=ao" target="_blank">
           <img src="/assets/GScholarlogo.png" alt="Google Scholar" style="width: 32px; height: 32px;">
@@ -73,7 +72,7 @@
         <a class="cv-button" href="/assets/CV.pdf" target="_blank">Download my CV</a>
       </div>
 
-
+      <p></p>
       <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
 
     </header>
