--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
         </a>
         
         <a class="linkedin-button" href="https://scholar.google.be/citations?user=ohWNXuEAAAAJ&hl=en&oi=ao" target="_blank">
-          <img src="/assets/GScholarlogo.png" alt="Google Scholar" style="width: 32px; height: 32px;">
+          <img src="/assets/Gscholarblackwhite.png" alt="Google Scholar" style="width: 32px; height: 32px;">
         </a>
 
-        <!-- CV button -->
-        <a class="cv-button" href="/assets/CV.pdf" target="_blank">Download my CV</a>
       </div>
+
+      
+      <!-- CV button -->
+      <a class="cv-button" href="/assets/CV.pdf" target="_blank">Download my CV</a>
 
       <p></p>
       <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
