--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       background-color: #005082;
     }
 
-    .linkedin-button:hover span {
+    .linkedin-button:hover span,
+    .cv-button:hover span {
       color: #fff;
       /* Text color remains white on hover */
     }
@@ -72,7 +73,7 @@
 
       
       <!-- CV button -->
-      <a class="cv-button" href="/assets/CV.pdf" target="_blank">Download my CV</a>
+      <p><a class="cv-button" href="/assets/CV.pdf" target="_blank">Download my CV</a></p>
 
       <p></p>
       <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
