--- a/index.html
+++ b/index.html
@@ -68,23 +68,20 @@
       <!-- Container for buttons -->
       <div class="button-container">
 
-        <!-- LinkedIn button with logo -->
         <a class="linkedin-button" href="https://www.linkedin.com/in/tlechien" target="_blank">
-          <img src="/assets/linkedin_logo.png" alt="LinkedIn Logo">
-          LinkedIn Profile
+          <img src="/assets/linkedinwhite.png" alt="Linkedin">
+
         </a>
 
-        <!-- ResearchGate button with logo -->
+
         <a class="linkedin-button" href="https://www.researchgate.net/profile/Thibault-Lechien-2" target="_blank">
-          <img src="/assets/RGlogowhite.png" alt="ResearchGate Logo">
-          ResearchGate Profile
+          <img src="/assets/RGlogowhite.png" alt="ResearchGate">
+
         </a>
 
-        <!-- Google Scholar button with logo -->
         <a class="linkedin-button" href="https://scholar.google.be/citations?user=ohWNXuEAAAAJ&hl=en&oi=ao"
           target="_blank">
-          <img src="/assets/GScholarlogo.png" alt="Google Scholar Logo">
-          Google Scholar Profile
+          <img src="/assets/Gscholarblackwhite.png" alt="Google Scholar">
         </a>
 
       </div>
