--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
       display: flex;
       align-items: center;
       text-decoration: none;
-      padding: 5px 5px;
+      padding: 0px 0px;
       border-radius: 5px;
+      background-color: #0077B5;
+      color: #fff;
       font-weight: bold;
       transition: background-color 0.3s ease;
       margin-right: 10px;
     }
 
-    .linkedin-button:hover,
-    .cv-button:hover {
+    .linkedin-button:hover{
       background-color: #005082;
     }
 
@@ -43,8 +44,7 @@
     }
 
     /* Style for button images */
-    .linkedin-button img,
-    .cv-button img {
+    .linkedin-button img{
       width: 32px;
       height: 32px;
       margin-right: 8px;
@@ -89,7 +89,7 @@
       <p></p>
 
       <!-- CV button -->
-      <p><a class="cv-button" href="/assets/CV.pdf" target="_blank">Download my CV</a></p>
+      <p> <b><a href="/assets/CV.pdf" target="_blank">Download my CV</a></b></p>
 
       <p></p>
       <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
