--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       display: flex;
       align-items: center;
       text-decoration: none;
-      padding: 0px 0px;
+      padding: 5px 5px;
       border-radius: 5px;
       background-color: #0077B5;
       color: #fff;
@@ -89,7 +89,7 @@
       <p></p>
 
       <!-- CV button -->
-      <p> <b><a href="/assets/CV.pdf" target="_blank">Download my CV</a></b></p>
+      <p> <b><a href="/assets/CV.pdf" target="_blank">Download my CV</a></p>
 
       <p></p>
       <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
