--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       color: #fff;
       font-weight: bold;
       transition: background-color 0.3s ease;
-      margin-right: 10px;
     }
 
     .linkedin-button:hover{
@@ -89,7 +88,7 @@
       <p></p>
 
       <!-- CV button -->
-      <p> <b><a href="/assets/CV.pdf" target="_blank">Download my CV</a></p>
+      <p> <b><a href="/assets/CV.pdf" target="_blank">Download my CV</a></b></p>
 
       <p></p>
       <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
