--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         
         <a class="linkedin-button" href="https://science.gsfc.nasa.gov/sci/bio/thibault.a.lechien"
           target="_blank">
-          <img src="/assets/Gscholarblackwhite.png" alt="NASA Bio page">
+          <img src="/assets/nasawhite2.png" alt="NASA Bio page">
         </a>
 
       </div>
