--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         color: #fff;
         /* Light text color */
       }
+       header h1 {
+      color: #fff; /* White title color in dark mode */
+    }
+
+     header p {
+      color: #fff; /* White text color in dark mode */
+    }
 
       .button-container {
         background-color: #333;
@@ -100,7 +107,7 @@
 
 
         <a class="linkedin-button" href="https://science.gsfc.nasa.gov/sci/bio/thibault.a.lechien" target="_blank">
-          <img src="/assets/nasawhite2.png" alt="NASA Bio page">
+          <img src="/assets/nasawhite2new.png" alt="NASA Bio page">
         </a>
 
       </div>
