--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
      header p {
       color: #fff; /* White text color in dark mode */
     }
+    header {
+      color: #fff; /* White text color in dark mode */
+    }
 
       .button-container {
         background-color: #333;
@@ -107,7 +110,7 @@
 
 
         <a class="linkedin-button" href="https://science.gsfc.nasa.gov/sci/bio/thibault.a.lechien" target="_blank">
-          <img src="/assets/nasawhite2new.png" alt="NASA Bio page">
+          <img src="/assets/nasawhite2new.png" alt="NASA Bio page" style="width: 36px; height: 32px;">
         </a>
 
       </div>
