--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
       <h1>Site is very much a work in progress.</h1>
 
-      <h2>Math is hard</h2>
+      <!-- <h2>Math is hard</h2>
 
       <p>In first grade I learned that 5 &gt; 3 and 2 &lt; 7. Maybe some arrows. 1 -&gt; 2 -&gt; 3. 9 &lt;- 8 &lt;- 7.
       </p>
@@ -279,7 +279,7 @@ end
       <p>I get 10 times more traffic from <a href="http://google.com/" title="Google">Google</a> than from<br>
         <a href="http://search.yahoo.com/" title="Yahoo Search">Yahoo</a> or <a href="http://search.msn.com/"
           title="MSN Search">MSN</a>.
-      </p>
+      </p> -->
     </section>
     <footer>
       <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
