--- a/index.html
+++ b/index.html
@@ -18,16 +18,26 @@
         color: #fff;
         /* Light text color */
       }
-       header h1 {
-      color: #fff; /* White title color in dark mode */
-    }
 
-     header p {
-      color: #fff; /* White text color in dark mode */
-    }
-    header {
-      color: #fff; /* White text color in dark mode */
-    }
+      header h1 {
+        color: #fff;
+        /* White title color in dark mode */
+      }
+
+      header p {
+        color: #fff;
+        /* White text color in dark mode */
+      }
+
+      section h1 {
+        color: #fff;
+        /* White text color in dark mode */
+      }
+
+      section p {
+        color: #fff;
+        /* White text color in dark mode */
+      }
 
       .button-container {
         background-color: #333;
