--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         currently doing research on neutron stars. In particular, we are inferencing neutron star parameters from NICER
         and Fermi light curves using neural networks.</p>
 
-      <h1>Site is very much a work in progress.</h1>
+      <!-- <h1>Site is very much a work in progress.</h1> -->
 
       <!-- <h2>Math is hard</h2>
 
