--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Thibault Lechien</title>
 
+  <link rel="icon" type="image/x-icon" href="/assets/galaxy.png">
+
   <link rel="stylesheet" href="stylesheets/styles.css">
   <link rel="stylesheet" href="stylesheets/pygment_trac.css">
   <meta name="viewport" content="width=device-width">
