--- a/index.html
+++ b/index.html
@@ -143,9 +143,11 @@
     <section>
       <h1>AI for Astrophysics</h1>
 
-      <p>I am a Research Assistant in the Astroparticle Physics Lab at NASA Goddard Space Flight Center, where I am
+      <p>I am a Research Assistant in the <a href="https://science.gsfc.nasa.gov/astrophysics/astroparticles/" title="Astroparticle Physics Lab">Astroparticle Physics Lab</a> and
+        the <a href="https://science.gsfc.nasa.gov/astrophysics/gravity/" title="Gravitational Astrophysics Lab">Gravitational Astrophysics Lab</a>
+        at <a href="https://www.nasa.gov/goddard/" title="NASA Goddard">NASA Goddard Space Flight Center</a>, where I am
         currently doing research on neutron stars. In particular, we are inferencing neutron star parameters from NICER
-        and Fermi light curves using neural networks.</p>
+        and Fermi data.</p>
 
       <!-- <h1>Site is very much a work in progress.</h1> -->
 
