--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
       <p>I am a Research Assistant in the <a href="https://science.gsfc.nasa.gov/astrophysics/astroparticles/" title="Astroparticle Physics Lab">Astroparticle Physics Lab</a> and
         the <a href="https://science.gsfc.nasa.gov/astrophysics/gravity/" title="Gravitational Astrophysics Lab">Gravitational Astrophysics Lab</a>
         at <a href="https://www.nasa.gov/goddard/" title="NASA Goddard">NASA Goddard Space Flight Center</a>, where I am
-        currently doing research on neutron stars. In particular, we are inferencing neutron star parameters from NICER
-        and Fermi data.</p>
+        currently doing research on neutron stars. In particular, we are inferencing neutron star parameters from <a href="https://science.nasa.gov/mission/nicer/" title="NICER">NICER</a>
+        and <a href="https://fermi.gsfc.nasa.gov/" title="Fermi">Fermi</a> data.</p>
 
       <!-- <h1>Site is very much a work in progress.</h1> -->
 
