Revert "Update index.html"
This reverts commit 97df8b5b76cc3ec6bdf249131e1b297f04b39c96.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,42 @@
 
 
   <style>
-    
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: #1f1f1f;
+        /* Dark background color */
+        color: #fff;
+        /* Light text color */
+      }
+
+      header h1 {
+        color: #fff;
+        /* White title color in dark mode */
+      }
+
+      header p {
+        color: #fff;
+        /* White text color in dark mode */
+      }
+
+      section h1 {
+        color: #fff;
+        /* White text color in dark mode */
+      }
+
+      section p {
+        color: #fff;
+        /* White text color in dark mode */
+      }
+
+      .button-container {
+        background-color: #333;
+        /* Dark background color for buttons */
+      }
+
+      /* Adjust other styles for dark mode */
+    }
+
     .button-container {
       display: flex;
       align-items: center;
