--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta name="viewport" content="width=device-width">
 
   <link id="theme-style" rel="stylesheet" href="stylesheets/light-mode.css">
+  <link id="theme-style" rel="stylesheet" href="stylesheets/dark-mode.css">
 
 
   <style>
