--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
   <link rel="stylesheet" href="stylesheets/pygment_trac.css">
   <meta name="viewport" content="width=device-width">
 
-  <link id="theme-style" rel="stylesheet" href="stylesheets/light-mode.css">
-  <link id="theme-style" rel="stylesheet" href="stylesheets/dark-mode.css">
-
-
   <style>
     @media (prefers-color-scheme: dark) {
       body {
@@ -61,7 +57,8 @@
     }
 
     /* Style for all buttons */
-    .linkedin-button{
+    .linkedin-button,
+    .cv-button {
       display: flex;
       align-items: center;
       text-decoration: none;
@@ -77,7 +74,8 @@
       background-color: #005082;
     }
 
-    .linkedin-button:hover span{
+    .linkedin-button:hover span,
+    .cv-button:hover span {
       color: #fff;
       /* Text color remains white on hover */
     }
@@ -133,15 +131,13 @@
 
 
 
+      <!-- CV button -->
       <p> <b><a href="/assets/CV.pdf" target="_blank">Download my CV</a></b></p>
 
 
 
       <p></p>
       <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
-
-      <!-- Add a button to toggle dark mode -->
-    <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
 
     </header>
     <section>
