--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
       height: 32px;
       /* Adjust as needed for spacing between image and text */
     }
+
+    body {
+    background-color: #1f1f1f; /* Dark background color */
+    background-image: url('assets/stars.jpg'); /* Replace 'path/to/stars-image.jpg' with the actual path to your stars image */
+    background-repeat: repeat; /* Repeat the background image */
+  }
   </style>
 
 
