--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     body {
     background-color: #1f1f1f; /* Dark background color */
-    background-image: url('assets/stars.jpg'); /* Replace 'path/to/stars-image.jpg' with the actual path to your stars image */
+    background-image: url('assets/galaxytile.jpg'); /* Replace 'path/to/stars-image.jpg' with the actual path to your stars image */
     background-repeat: repeat; /* Repeat the background image */
   }
   </style>
