--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
       /* Adjust as needed for spacing between image and text */
     }
 
-    body {
+    <!--body {
     background-color: #1f1f1f; /* Dark background color */
     background-image: url('assets/galaxytile.jpg'); /* Replace 'path/to/stars-image.jpg' with the actual path to your stars image */
     background-repeat: repeat; /* Repeat the background image */
-  }
+    }-->
   </style>
 
 
