--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       }
 
       .button-container {
-        background-color: #333;
+        background-color: #1f1f1f;
         /* Dark background color for buttons */
       }
 
