--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 
       <p></p>
-      <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien@nasa.gov</a></p>
+      <p><a href="mailto:thibault.a.lechien@nasa.gov">thibault.a.lechien (at) nasa.gov</a></p>
 
     </header>
     <section>
