--- a/index.html
+++ b/index.html
@@ -156,8 +156,13 @@
         the <a href="https://science.gsfc.nasa.gov/astrophysics/gravity/" title="Gravitational Astrophysics Lab">Gravitational Astrophysics Lab</a>
         at <a href="https://www.nasa.gov/goddard/" title="NASA Goddard">NASA Goddard Space Flight Center</a>, where I am
         currently doing research on neutron stars. In particular, we are inferencing neutron star parameters from <a href="https://science.nasa.gov/mission/nicer/" title="NICER">NICER</a>
-        and <a href="https://fermi.gsfc.nasa.gov/" title="Fermi">Fermi</a> data.</p>
+        and <a href="https://fermi.gsfc.nasa.gov/" title="Fermi">Fermi</a> data. Due to the large computational cost of simulating data, neural networks can be used to speed up this process by a factor of 200, at a minimal loss in accuracy. </p>
 
+
+      
+      <h2>Research interests</h2>
+      My current research interests involve solving interesting inverse problems in (astro)physics. Examples include reconstructing the Dark Matter distribution in the Galactic Center using orbits of stars <a href="https://arxiv.org/pdf/2308.09170.pdf" title="https://arxiv.org/pdf/2308.09170.pdf">arXiv:2308.09170</a> and reconstructing spectral functions of confined particles in high energy physics <a href="https://scipost.org/SciPostPhys.13.4.097/pdf" title="https://scipost.org/SciPostPhys.13.4.097/pdf">SciPostPhys.13.4.097</a>. 
+      
       <!-- <h1>Site is very much a work in progress.</h1> -->
 
       <!-- <h2>Math is hard</h2>
@@ -297,12 +302,7 @@ end
         </tbody>
       </table>
 
-      <h2>Crazy linking action</h2>
-
-      <p>I get 10 times more traffic from <a href="http://google.com/" title="Google">Google</a> than from<br>
-        <a href="http://search.yahoo.com/" title="Yahoo Search">Yahoo</a> or <a href="http://search.msn.com/"
-          title="MSN Search">MSN</a>.
-      </p> -->
+ -->
     </section>
     <footer>
       <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
