--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         color: #fff;
         /* White text color in dark mode */
       }
+      
+      section h2 {
+        color: #fff;
+        /* White text color in dark mode */
+      }
 
       section p {
         color: #fff;
