--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
 
       
       <h2>Research interests</h2>
-      <p>My current research interests involve solving interesting inverse problems in (astro)physics. Coming from a computer science and AI background, I see a huge potential for AI methods to be applied to the incoming wave (tsunami?) of data from the current and future astronomical campaigns. </p>
+      <p>My current research interests involve solving interesting inverse problems in (astro)physics. 
+      Coming from a computer science and AI background, I see a huge potential for AI methods to be applied to these problems. Traditional methods are either too inefficient, cannot handle large datasets or suffer from analytic degeneracies.
+       With the incoming wave (tsunami!) of data from the current and future astronomical campaigns, astrophysics needs new methodologies.  </p>
       
       <h2>Current and past projects</h2>
       <ul>
