--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <p>My current research interests involve solving interesting inverse problems in (astro)physics. 
       Coming from a computer science background, I see a huge potential for AI methods to be applied to these problems. 
       Traditional (non-AI) methods are often too inefficient, cannot handle large datasets or suffer from analytic degeneracies.
-      With the incoming wave (tsunami!) of data from the current and future astronomical campaigns, astrophysics needs new methodologies.  </p>
+      With the incoming wave of data from the current and future astronomical campaigns, astrophysics needs new methodologies.  </p>
       
       <h2>Current and past projects</h2>
       <ul>
