--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Thibault Lechien</title>
 
+  <link rel="icon" href="/assets/galaxy.png">
   <link rel="icon" type="image/x-icon" href="/assets/galaxy.png">
 
   <link rel="stylesheet" href="stylesheets/styles.css">
