--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Thibault Lechien</title>
+  <meta name="description" content="Personal website of Thibault Lechien. Research assistant at NASA Goddard | AI for Astrophysics.">
 
   <link rel="icon" href="/assets/galaxy.png">
   <link rel="icon" type="image/x-icon" href="/assets/galaxy.png">
