--- a/index.html
+++ b/index.html
@@ -136,11 +136,6 @@
           <img src="/assets/Gscholarblackwhite.png" alt="Google Scholar">
         </a>
 
-
-        /* <a class="linkedin-button" href="https://science.gsfc.nasa.gov/sci/bio/thibault.a.lechien" target="_blank">
-          <img src="/assets/nasawhite2new.png" alt="NASA Bio page" style="width: 36px; height: 32px;">
-        </a> */
-
       </div>
 
       <p></p>
@@ -173,7 +168,7 @@
       Traditional (non-AI) methods are often too inefficient, cannot handle large datasets or suffer from analytic degeneracies.
       With the incoming wave of data from the current and future astronomical campaigns, astrophysics needs new methodologies.  </p>
       
-      <h2>Current and past projects</h2>
+      <h2>Past projects</h2>
       <ul>
         <li>At NASA Goddard Space Flight Center, I did research on neutron star X-ray and Gamma-ray emission. In particular, we inferred neutron star parameters from <a href="https://science.nasa.gov/mission/nicer/" title="NICER">NICER</a>
           and <a href="https://fermi.gsfc.nasa.gov/" title="Fermi">Fermi</a> data using neural networks emulators, speeding up simulations by 7 orders of magnitude at a minimal loss in accuracy. I am also a member of the Fermi LAT Collaboration. </li>
