--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <div class="wrapper">
     <header>
       <h1>Thibault Lechien</h1>
-      <p>PhD Student <br> Max Planck Institute for Astrophysics <br> Previously at NASA Goddard Space Flight Center</p>
+      <p>PhD Student <br> Max Planck Institute for Astrophysics ('24-'28)</p>
       <img src="/assets/IMG_1624.jpg" alt="Thibault Lechien's Photo">
       <p></p>
 
@@ -134,6 +134,11 @@
         <a class="linkedin-button" href="https://scholar.google.be/citations?user=ohWNXuEAAAAJ&hl=en&oi=ao"
           target="_blank">
           <img src="/assets/Gscholarblackwhite.png" alt="Google Scholar">
+        </a>
+
+        <a class="linkedin-button" href="https://orcid.org/0000-0001-6284-2842"
+          target="_blank">
+          <img src="/assets/orcid-white.jpg" alt="Orcid ID">
         </a>
 
       </div>
