--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <div class="wrapper">
     <header>
       <h1>Thibault Lechien</h1>
-      <p>PhD Student <br> Max Planck Institute for Astrophysics ('24-'28)</p>
+      <p>PhD Student ('24-'28) <br> Max Planck Institute for Astrophysics</p>
       <img src="/assets/IMG_1624.jpg" alt="Thibault Lechien's Photo">
       <p></p>
 
