--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         <a class="linkedin-button" href="https://orcid.org/0000-0001-6284-2842"
           target="_blank">
-          <img src="/assets/orcid-whitefull.png" alt="Orcid ID">
+          <img src="/assets/orcid.logo.icon.svg" alt="Orcid ID">
         </a>
 
       </div>
