--- a/index.html
+++ b/index.html
@@ -125,11 +125,15 @@
             font-weight: bold;
             transition: width 0.5s ease;
         }
-        .progress-text {
-            font-size: 16px;
-            margin-top: 10px;
-        }
-    </style>
+        #bar {
+            width: 100%;
+            height: 1.5rem;
+            text-align: center;
+            color: white;
+          }
+  </style>
+
+  
 
 
 
@@ -214,7 +218,10 @@
       <div class="progress-container">
         <div class="progress-bar" id="progressBar">0%</div>
       </div>
-      <div class="progress-text" id="progressText">Progress: 0%</div>
+
+      <div class="progress">
+        <div class="progress-bar" id="progressBar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
 
       <script>
         // PhD start date and duration in milliseconds (4 years)
