--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       
       <h2>PhD progress bar</h2>
       <div class="progress">
-  <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
 </div>  
 
       <script>
