--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
       
       <h2>PhD progress bar</h2>
       <div class="progress">
-  <div class="progress-bar progress-bar-striped bg-info" role="progressbar"  style="width: 0%" aria-valuenow="0"  aria-valuemin="0" aria-valuemax="100"></div>
-</div>  
+        <div class="progress-bar progress-bar-striped bg-info" role="progressbar"  style="width: 1.4%" aria-valuenow="1.4  aria-valuemin="0" aria-valuemax="100">1.4%</div>
+      </div>  
 
       <script>
         // PhD start date and duration in milliseconds (4 years)
