--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 
   <link rel="stylesheet" href="stylesheets/styles.css">
   <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 
   <style>
@@ -105,7 +104,26 @@
     /* background-repeat: repeat; /* Repeat the background image */
     /*} 
     */
-    -->
+
+    .progress {
+            height: var(--bs-progress-height, 1.5rem); /* Using Bootstrap CSS variable */
+            border-radius: var(--bs-progress-border-radius, 0.5rem);
+            margin: 20px auto;
+            width: 80%;
+            box-shadow: var(--bs-progress-box-shadow, inset 0 1px 2px rgba(0,0,0,0.1));
+            background-color: var(--bs-progress-bg, #495057); /* Darker progress background */
+        }
+        .progress-bar {
+            background-color: var(--bs-progress-bar-bg, #17a2b8); /* Custom color for progress bar */
+            color: var(--bs-progress-bar-color, #fff);
+            transition: var(--bs-progress-bar-transition, width .6s ease); /* Smooth transition */
+        }
+        .progress-text {
+            font-size: var(--bs-progress-font-size, 16px);
+            margin-top: 10px;
+        }
+
+
   </style> 
 
 
@@ -113,6 +131,9 @@
 </head>
 
 <body>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+ 
   <div class="wrapper">
     <header>
       <h1>Thibault Lechien</h1>
@@ -188,9 +209,9 @@
 
       
       <h2>PhD progress bar</h2>
-      <div class="progress">
-        <div class="progress-bar progress-bar-striped bg-info" role="progressbar"  style="width: 1.4%" aria-valuenow="1.4  aria-valuemin="0" aria-valuemax="100">1.4%</div>
-      </div>  
+      <div class="progress" role="progressbar" aria-label="Info striped example" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">
+             <div class="progress-bar progress-bar-striped bg-info" style="width: 5%"></div>
+      </div>
 
       <script>
         // PhD start date and duration in milliseconds (4 years)
@@ -204,7 +225,8 @@
             const progressPercentage = Math.min((elapsedTime / phdDuration) * 100, 100).toFixed(2);
             
             // Update progress bar
-            const progressBar = document.getElementById('progress-bar');
+            const progressBar = document.getElementById('progressBar');
+
             progressBar.style.width = `${progressPercentage}%`;
             progressBar.setAttribute('aria-valuenow', progressPercentage); // Update aria attribute
         }
