--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <div class="progress" role="progressbar" aria-label="Info striped example" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">
              <div class="progress-bar progress-bar-striped bg-info" style="width: 5%">
 
-          <div class="progress-text" id="progressText">Progress: 0%</div>
+          <div class="progress-text" id="progressText">0%</div>
              </div>
       </div>
 
@@ -232,7 +232,13 @@
             const progressText = document.getElementById('progressText');
             progressBar.style.width = `${progressPercentage}%`;
             progressBar.setAttribute('aria-valuenow', progressPercentage); // Update aria attribute
-            progressText.textContent = `Progress: ${progressPercentage}%`;
+            progressText.textContent = `${progressPercentage}%`;
+            
+            const progressBar2 = document.getElementById('progress-bar');
+            const progressText2 = document.getElementById('progress-text');
+            progressBar2.style.width = `${progressPercentage}%`;
+            progressBar2.setAttribute('aria-valuenow', progressPercentage); // Update aria attribute
+            progressText2.textContent = `${progressPercentage}%`;
         }
     
         // Call the update function
